// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`io-textarea — render snapshots > renders default state 1`] = `
<io-textarea state="none" size="md" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="textarea-wrapper">
      <textarea id="io-textarea-4fzzzxjylrx" class="textarea-field textarea-field--resize-vertical textarea-field--md" placeholder="Write here" value rows="4" aria-describedby="io-textarea-4fzzzxjylrx-message"></textarea>
      <label for="io-textarea-4fzzzxjylrx" class="textarea-label">
        <span class="textarea-label__slot textarea-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          Message
        </span>
      </label>
    </div>
    <p id="io-textarea-4fzzzxjylrx-helper" class="textarea-helper textarea-helper--hidden">
      <span class="textarea-description__slot textarea-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-textarea>
`;

exports[`io-textarea — render snapshots > renders disabled state 1`] = `
<io-textarea disabled state="none" size="md" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="textarea-wrapper textarea-wrapper--disabled">
      <textarea id="io-textarea-4fzzzxjylrx" class="textarea-field textarea-field--resize-vertical textarea-field--md" placeholder=" " value="Read only" disabled rows="4" aria-describedby="io-textarea-4fzzzxjylrx-message"></textarea>
      <label for="io-textarea-4fzzzxjylrx" class="textarea-label">
        <span class="textarea-label__slot textarea-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          Disabled
        </span>
      </label>
    </div>
    <p id="io-textarea-4fzzzxjylrx-helper" class="textarea-helper textarea-helper--hidden">
      <span class="textarea-description__slot textarea-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-textarea>
`;

exports[`io-textarea — render snapshots > renders resize modes 1`] = `
MockHTMLElement {
  "__attributeMap": MockAttributeMap {
    "__items": [
      MockAttr {
        "_name": "__self",
        "_namespaceURI": null,
        "_value": "[object global]",
      },
      MockAttr {
        "_name": "__source",
        "_namespaceURI": null,
        "_value": "[object Object]",
      },
    ],
    "caseInsensitive": true,
  },
  "__namespaceURI": "http://www.w3.org/1999/xhtml",
  "__shadowRoot": null,
  "__style": undefined,
  "_childNodes": [
    <io-textarea state="none" size="md" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="textarea-wrapper">
      <textarea id="io-textarea-4fzzzxjylrx" class="textarea-field textarea-field--resize-none textarea-field--md" placeholder=" " value rows="4" aria-describedby="io-textarea-4fzzzxjylrx-message"></textarea>
      <label for="io-textarea-4fzzzxjylrx" class="textarea-label">
        <span class="textarea-label__slot textarea-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          None
        </span>
      </label>
    </div>
    <p id="io-textarea-4fzzzxjylrx-helper" class="textarea-helper textarea-helper--hidden">
      <span class="textarea-description__slot textarea-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-textarea>,
    <io-textarea state="none" size="md" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="textarea-wrapper">
      <textarea id="io-textarea-4fzzzxjylrx" class="textarea-field textarea-field--resize-vertical textarea-field--md" placeholder=" " value rows="4" aria-describedby="io-textarea-4fzzzxjylrx-message"></textarea>
      <label for="io-textarea-4fzzzxjylrx" class="textarea-label">
        <span class="textarea-label__slot textarea-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          Vertical
        </span>
      </label>
    </div>
    <p id="io-textarea-4fzzzxjylrx-helper" class="textarea-helper textarea-helper--hidden">
      <span class="textarea-description__slot textarea-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-textarea>,
    <io-textarea state="none" size="md" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="textarea-wrapper">
      <textarea id="io-textarea-4fzzzxjylrx" class="textarea-field textarea-field--resize-auto textarea-field--md" placeholder=" " value rows="4" aria-describedby="io-textarea-4fzzzxjylrx-message"></textarea>
      <label for="io-textarea-4fzzzxjylrx" class="textarea-label">
        <span class="textarea-label__slot textarea-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          Auto
        </span>
      </label>
    </div>
    <p id="io-textarea-4fzzzxjylrx-helper" class="textarea-helper textarea-helper--hidden">
      <span class="textarea-description__slot textarea-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-textarea>,
  ],
  "_nodeValue": null,
  "nodeName": "DIV",
  "nodeType": 1,
  "ownerDocument": _MockDocument {
    "__attributeMap": MockAttributeMap {
      "__items": [],
      "caseInsensitive": true,
    },
    "__listeners": [
      MockEventListener {
        "handler": [Function],
        "type": "keydown",
      },
      MockEventListener {
        "handler": [Function],
        "type": "pointerdown",
      },
      MockEventListener {
        "handler": [Function],
        "type": "pointerover",
      },
      MockEventListener {
        "handler": [Function],
        "type": "pointerout",
      },
      MockEventListener {
        "handler": [Function],
        "type": "focusin",
      },
      MockEventListener {
        "handler": [Function],
        "type": "focusout",
      },
      MockEventListener {
        "handler": [Function],
        "type": "keydown",
      },
      MockEventListener {
        "handler": null,
        "type": "e",
      },
    ],
    "__namespaceURI": "http://www.w3.org/1999/xhtml",
    "__shadowRoot": null,
    "__style": undefined,
    "_childNodes": [
      MockDocumentTypeNode {
        "__attributeMap": MockAttributeMap {
          "__items": [
            MockAttr {
              "_name": "html",
              "_namespaceURI": null,
              "_value": "",
            },
          ],
          "caseInsensitive": true,
        },
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [],
        "_nodeValue": null,
        "nodeName": "!DOCTYPE",
        "nodeType": 10,
        "ownerDocument": [Circular],
        "parentNode": [Circular],
      },
      MockHTMLElement {
        "__attributeMap": MockAttributeMap {
          "__items": [],
          "caseInsensitive": true,
        },
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockStyleElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "data-styles",
                      "_namespaceURI": null,
                      "_value": "",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  _MockTextNode {
                    "_childNodes": [],
                    "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                    "nodeName": "#text",
                    "nodeType": 3,
                    "ownerDocument": [Circular],
                    "parentNode": [Circular],
                  },
                ],
                "_nodeValue": null,
                "nodeName": "STYLE",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
                "sheet": MockCSSStyleSheet {
                  "cssRules": [
                    MockCSSRule {
                      "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                      "parentStyleSheet": [Circular],
                      "type": 0,
                    },
                  ],
                  "ownerNode": [Circular],
                  "parentStyleSheet": null,
                  "type": "text/css",
                },
              },
            ],
            "_nodeValue": null,
            "nodeName": "HEAD",
            "nodeType": 1,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              _MockTextNode {
                "_childNodes": [],
                "_nodeValue": "http://localhost:3000/",
                "nodeName": "#text",
                "nodeType": 3,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
              MockHTMLElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "class",
                      "_namespaceURI": null,
                      "_value": "stencil-component-stage",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  [Circular],
                ],
                "_nodeValue": null,
                "nodeName": "DIV",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
            ],
            "_nodeValue": null,
            "nodeName": "BODY",
            "nodeType": 1,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
        ],
        "_nodeValue": null,
        "nodeName": "HTML",
        "nodeType": 1,
        "ownerDocument": [Circular],
        "parentNode": [Circular],
      },
    ],
    "_nodeValue": null,
    "cookie": "",
    "defaultView": [Object],
    "nodeName": "#document",
    "nodeType": 9,
    "ownerDocument": null,
    "parentNode": null,
    "referrer": "",
  },
  "parentNode": MockHTMLElement {
    "__attributeMap": MockAttributeMap {
      "__items": [
        MockAttr {
          "_name": "class",
          "_namespaceURI": null,
          "_value": "stencil-component-stage",
        },
      ],
      "caseInsensitive": true,
    },
    "__namespaceURI": "http://www.w3.org/1999/xhtml",
    "__shadowRoot": null,
    "__style": undefined,
    "_childNodes": [
      [Circular],
    ],
    "_nodeValue": null,
    "nodeName": "DIV",
    "nodeType": 1,
    "ownerDocument": _MockDocument {
      "__attributeMap": MockAttributeMap {
        "__items": [],
        "caseInsensitive": true,
      },
      "__listeners": [
        MockEventListener {
          "handler": [Function],
          "type": "keydown",
        },
        MockEventListener {
          "handler": [Function],
          "type": "pointerdown",
        },
        MockEventListener {
          "handler": [Function],
          "type": "pointerover",
        },
        MockEventListener {
          "handler": [Function],
          "type": "pointerout",
        },
        MockEventListener {
          "handler": [Function],
          "type": "focusin",
        },
        MockEventListener {
          "handler": [Function],
          "type": "focusout",
        },
        MockEventListener {
          "handler": [Function],
          "type": "keydown",
        },
        MockEventListener {
          "handler": null,
          "type": "e",
        },
      ],
      "__namespaceURI": "http://www.w3.org/1999/xhtml",
      "__shadowRoot": null,
      "__style": undefined,
      "_childNodes": [
        MockDocumentTypeNode {
          "__attributeMap": MockAttributeMap {
            "__items": [
              MockAttr {
                "_name": "html",
                "_namespaceURI": null,
                "_value": "",
              },
            ],
            "caseInsensitive": true,
          },
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [],
          "_nodeValue": null,
          "nodeName": "!DOCTYPE",
          "nodeType": 10,
          "ownerDocument": [Circular],
          "parentNode": [Circular],
        },
        MockHTMLElement {
          "__attributeMap": MockAttributeMap {
            "__items": [],
            "caseInsensitive": true,
          },
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [
            MockHTMLElement {
              "__attributeMap": MockAttributeMap {
                "__items": [],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [
                MockStyleElement {
                  "__attributeMap": MockAttributeMap {
                    "__items": [
                      MockAttr {
                        "_name": "data-styles",
                        "_namespaceURI": null,
                        "_value": "",
                      },
                    ],
                    "caseInsensitive": true,
                  },
                  "__namespaceURI": "http://www.w3.org/1999/xhtml",
                  "__shadowRoot": null,
                  "__style": undefined,
                  "_childNodes": [
                    _MockTextNode {
                      "_childNodes": [],
                      "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                      "nodeName": "#text",
                      "nodeType": 3,
                      "ownerDocument": [Circular],
                      "parentNode": [Circular],
                    },
                  ],
                  "_nodeValue": null,
                  "nodeName": "STYLE",
                  "nodeType": 1,
                  "ownerDocument": [Circular],
                  "parentNode": [Circular],
                  "sheet": MockCSSStyleSheet {
                    "cssRules": [
                      MockCSSRule {
                        "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                        "parentStyleSheet": [Circular],
                        "type": 0,
                      },
                    ],
                    "ownerNode": [Circular],
                    "parentStyleSheet": null,
                    "type": "text/css",
                  },
                },
              ],
              "_nodeValue": null,
              "nodeName": "HEAD",
              "nodeType": 1,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
            MockHTMLElement {
              "__attributeMap": MockAttributeMap {
                "__items": [],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [
                _MockTextNode {
                  "_childNodes": [],
                  "_nodeValue": "http://localhost:3000/",
                  "nodeName": "#text",
                  "nodeType": 3,
                  "ownerDocument": [Circular],
                  "parentNode": [Circular],
                },
                [Circular],
              ],
              "_nodeValue": null,
              "nodeName": "BODY",
              "nodeType": 1,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
          ],
          "_nodeValue": null,
          "nodeName": "HTML",
          "nodeType": 1,
          "ownerDocument": [Circular],
          "parentNode": [Circular],
        },
      ],
      "_nodeValue": null,
      "cookie": "",
      "defaultView": [Object],
      "nodeName": "#document",
      "nodeType": 9,
      "ownerDocument": null,
      "parentNode": null,
      "referrer": "",
    },
    "parentNode": MockHTMLElement {
      "__attributeMap": MockAttributeMap {
        "__items": [],
        "caseInsensitive": true,
      },
      "__namespaceURI": "http://www.w3.org/1999/xhtml",
      "__shadowRoot": null,
      "__style": undefined,
      "_childNodes": [
        _MockTextNode {
          "_childNodes": [],
          "_nodeValue": "http://localhost:3000/",
          "nodeName": "#text",
          "nodeType": 3,
          "ownerDocument": _MockDocument {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__listeners": [
              MockEventListener {
                "handler": [Function],
                "type": "keydown",
              },
              MockEventListener {
                "handler": [Function],
                "type": "pointerdown",
              },
              MockEventListener {
                "handler": [Function],
                "type": "pointerover",
              },
              MockEventListener {
                "handler": [Function],
                "type": "pointerout",
              },
              MockEventListener {
                "handler": [Function],
                "type": "focusin",
              },
              MockEventListener {
                "handler": [Function],
                "type": "focusout",
              },
              MockEventListener {
                "handler": [Function],
                "type": "keydown",
              },
              MockEventListener {
                "handler": null,
                "type": "e",
              },
            ],
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockDocumentTypeNode {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "html",
                      "_namespaceURI": null,
                      "_value": "",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [],
                "_nodeValue": null,
                "nodeName": "!DOCTYPE",
                "nodeType": 10,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
              MockHTMLElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  MockHTMLElement {
                    "__attributeMap": MockAttributeMap {
                      "__items": [],
                      "caseInsensitive": true,
                    },
                    "__namespaceURI": "http://www.w3.org/1999/xhtml",
                    "__shadowRoot": null,
                    "__style": undefined,
                    "_childNodes": [
                      MockStyleElement {
                        "__attributeMap": MockAttributeMap {
                          "__items": [
                            MockAttr {
                              "_name": "data-styles",
                              "_namespaceURI": null,
                              "_value": "",
                            },
                          ],
                          "caseInsensitive": true,
                        },
                        "__namespaceURI": "http://www.w3.org/1999/xhtml",
                        "__shadowRoot": null,
                        "__style": undefined,
                        "_childNodes": [
                          _MockTextNode {
                            "_childNodes": [],
                            "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                            "nodeName": "#text",
                            "nodeType": 3,
                            "ownerDocument": [Circular],
                            "parentNode": [Circular],
                          },
                        ],
                        "_nodeValue": null,
                        "nodeName": "STYLE",
                        "nodeType": 1,
                        "ownerDocument": [Circular],
                        "parentNode": [Circular],
                        "sheet": MockCSSStyleSheet {
                          "cssRules": [
                            MockCSSRule {
                              "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                              "parentStyleSheet": [Circular],
                              "type": 0,
                            },
                          ],
                          "ownerNode": [Circular],
                          "parentStyleSheet": null,
                          "type": "text/css",
                        },
                      },
                    ],
                    "_nodeValue": null,
                    "nodeName": "HEAD",
                    "nodeType": 1,
                    "ownerDocument": [Circular],
                    "parentNode": [Circular],
                  },
                  [Circular],
                ],
                "_nodeValue": null,
                "nodeName": "HTML",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
            ],
            "_nodeValue": null,
            "cookie": "",
            "defaultView": [Object],
            "nodeName": "#document",
            "nodeType": 9,
            "ownerDocument": null,
            "parentNode": null,
            "referrer": "",
          },
          "parentNode": [Circular],
        },
        [Circular],
      ],
      "_nodeValue": null,
      "nodeName": "BODY",
      "nodeType": 1,
      "ownerDocument": _MockDocument {
        "__attributeMap": MockAttributeMap {
          "__items": [],
          "caseInsensitive": true,
        },
        "__listeners": [
          MockEventListener {
            "handler": [Function],
            "type": "keydown",
          },
          MockEventListener {
            "handler": [Function],
            "type": "pointerdown",
          },
          MockEventListener {
            "handler": [Function],
            "type": "pointerover",
          },
          MockEventListener {
            "handler": [Function],
            "type": "pointerout",
          },
          MockEventListener {
            "handler": [Function],
            "type": "focusin",
          },
          MockEventListener {
            "handler": [Function],
            "type": "focusout",
          },
          MockEventListener {
            "handler": [Function],
            "type": "keydown",
          },
          MockEventListener {
            "handler": null,
            "type": "e",
          },
        ],
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [
          MockDocumentTypeNode {
            "__attributeMap": MockAttributeMap {
              "__items": [
                MockAttr {
                  "_name": "html",
                  "_namespaceURI": null,
                  "_value": "",
                },
              ],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [],
            "_nodeValue": null,
            "nodeName": "!DOCTYPE",
            "nodeType": 10,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockHTMLElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  MockStyleElement {
                    "__attributeMap": MockAttributeMap {
                      "__items": [
                        MockAttr {
                          "_name": "data-styles",
                          "_namespaceURI": null,
                          "_value": "",
                        },
                      ],
                      "caseInsensitive": true,
                    },
                    "__namespaceURI": "http://www.w3.org/1999/xhtml",
                    "__shadowRoot": null,
                    "__style": undefined,
                    "_childNodes": [
                      _MockTextNode {
                        "_childNodes": [],
                        "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                        "nodeName": "#text",
                        "nodeType": 3,
                        "ownerDocument": [Circular],
                        "parentNode": [Circular],
                      },
                    ],
                    "_nodeValue": null,
                    "nodeName": "STYLE",
                    "nodeType": 1,
                    "ownerDocument": [Circular],
                    "parentNode": [Circular],
                    "sheet": MockCSSStyleSheet {
                      "cssRules": [
                        MockCSSRule {
                          "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                          "parentStyleSheet": [Circular],
                          "type": 0,
                        },
                      ],
                      "ownerNode": [Circular],
                      "parentStyleSheet": null,
                      "type": "text/css",
                    },
                  },
                ],
                "_nodeValue": null,
                "nodeName": "HEAD",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
              [Circular],
            ],
            "_nodeValue": null,
            "nodeName": "HTML",
            "nodeType": 1,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
        ],
        "_nodeValue": null,
        "cookie": "",
        "defaultView": [Object],
        "nodeName": "#document",
        "nodeType": 9,
        "ownerDocument": null,
        "parentNode": null,
        "referrer": "",
      },
      "parentNode": MockHTMLElement {
        "__attributeMap": MockAttributeMap {
          "__items": [],
          "caseInsensitive": true,
        },
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockStyleElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "data-styles",
                      "_namespaceURI": null,
                      "_value": "",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  _MockTextNode {
                    "_childNodes": [],
                    "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                    "nodeName": "#text",
                    "nodeType": 3,
                    "ownerDocument": _MockDocument {
                      "__attributeMap": MockAttributeMap {
                        "__items": [],
                        "caseInsensitive": true,
                      },
                      "__listeners": [
                        MockEventListener {
                          "handler": [Function],
                          "type": "keydown",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "pointerdown",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "pointerover",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "pointerout",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "focusin",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "focusout",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "keydown",
                        },
                        MockEventListener {
                          "handler": null,
                          "type": "e",
                        },
                      ],
                      "__namespaceURI": "http://www.w3.org/1999/xhtml",
                      "__shadowRoot": null,
                      "__style": undefined,
                      "_childNodes": [
                        MockDocumentTypeNode {
                          "__attributeMap": MockAttributeMap {
                            "__items": [
                              MockAttr {
                                "_name": "html",
                                "_namespaceURI": null,
                                "_value": "",
                              },
                            ],
                            "caseInsensitive": true,
                          },
                          "__namespaceURI": "http://www.w3.org/1999/xhtml",
                          "__shadowRoot": null,
                          "__style": undefined,
                          "_childNodes": [],
                          "_nodeValue": null,
                          "nodeName": "!DOCTYPE",
                          "nodeType": 10,
                          "ownerDocument": [Circular],
                          "parentNode": [Circular],
                        },
                        [Circular],
                      ],
                      "_nodeValue": null,
                      "cookie": "",
                      "defaultView": [Object],
                      "nodeName": "#document",
                      "nodeType": 9,
                      "ownerDocument": null,
                      "parentNode": null,
                      "referrer": "",
                    },
                    "parentNode": [Circular],
                  },
                ],
                "_nodeValue": null,
                "nodeName": "STYLE",
                "nodeType": 1,
                "ownerDocument": _MockDocument {
                  "__attributeMap": MockAttributeMap {
                    "__items": [],
                    "caseInsensitive": true,
                  },
                  "__listeners": [
                    MockEventListener {
                      "handler": [Function],
                      "type": "keydown",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "pointerdown",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "pointerover",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "pointerout",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "focusin",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "focusout",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "keydown",
                    },
                    MockEventListener {
                      "handler": null,
                      "type": "e",
                    },
                  ],
                  "__namespaceURI": "http://www.w3.org/1999/xhtml",
                  "__shadowRoot": null,
                  "__style": undefined,
                  "_childNodes": [
                    MockDocumentTypeNode {
                      "__attributeMap": MockAttributeMap {
                        "__items": [
                          MockAttr {
                            "_name": "html",
                            "_namespaceURI": null,
                            "_value": "",
                          },
                        ],
                        "caseInsensitive": true,
                      },
                      "__namespaceURI": "http://www.w3.org/1999/xhtml",
                      "__shadowRoot": null,
                      "__style": undefined,
                      "_childNodes": [],
                      "_nodeValue": null,
                      "nodeName": "!DOCTYPE",
                      "nodeType": 10,
                      "ownerDocument": [Circular],
                      "parentNode": [Circular],
                    },
                    [Circular],
                  ],
                  "_nodeValue": null,
                  "cookie": "",
                  "defaultView": [Object],
                  "nodeName": "#document",
                  "nodeType": 9,
                  "ownerDocument": null,
                  "parentNode": null,
                  "referrer": "",
                },
                "parentNode": [Circular],
                "sheet": MockCSSStyleSheet {
                  "cssRules": [
                    MockCSSRule {
                      "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-tab-panel,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                      "parentStyleSheet": [Circular],
                      "type": 0,
                    },
                  ],
                  "ownerNode": [Circular],
                  "parentStyleSheet": null,
                  "type": "text/css",
                },
              },
            ],
            "_nodeValue": null,
            "nodeName": "HEAD",
            "nodeType": 1,
            "ownerDocument": _MockDocument {
              "__attributeMap": MockAttributeMap {
                "__items": [],
                "caseInsensitive": true,
              },
              "__listeners": [
                MockEventListener {
                  "handler": [Function],
                  "type": "keydown",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "pointerdown",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "pointerover",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "pointerout",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "focusin",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "focusout",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "keydown",
                },
                MockEventListener {
                  "handler": null,
                  "type": "e",
                },
              ],
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [
                MockDocumentTypeNode {
                  "__attributeMap": MockAttributeMap {
                    "__items": [
                      MockAttr {
                        "_name": "html",
                        "_namespaceURI": null,
                        "_value": "",
                      },
                    ],
                    "caseInsensitive": true,
                  },
                  "__namespaceURI": "http://www.w3.org/1999/xhtml",
                  "__shadowRoot": null,
                  "__style": undefined,
                  "_childNodes": [],
                  "_nodeValue": null,
                  "nodeName": "!DOCTYPE",
                  "nodeType": 10,
                  "ownerDocument": [Circular],
                  "parentNode": [Circular],
                },
                [Circular],
              ],
              "_nodeValue": null,
              "cookie": "",
              "defaultView": [Object],
              "nodeName": "#document",
              "nodeType": 9,
              "ownerDocument": null,
              "parentNode": null,
              "referrer": "",
            },
            "parentNode": [Circular],
          },
          [Circular],
        ],
        "_nodeValue": null,
        "nodeName": "HTML",
        "nodeType": 1,
        "ownerDocument": _MockDocument {
          "__attributeMap": MockAttributeMap {
            "__items": [],
            "caseInsensitive": true,
          },
          "__listeners": [
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerdown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerover",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusin",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": null,
              "type": "e",
            },
          ],
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [
            MockDocumentTypeNode {
              "__attributeMap": MockAttributeMap {
                "__items": [
                  MockAttr {
                    "_name": "html",
                    "_namespaceURI": null,
                    "_value": "",
                  },
                ],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [],
              "_nodeValue": null,
              "nodeName": "!DOCTYPE",
              "nodeType": 10,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
            [Circular],
          ],
          "_nodeValue": null,
          "cookie": "",
          "defaultView": [Object],
          "nodeName": "#document",
          "nodeType": 9,
          "ownerDocument": null,
          "parentNode": null,
          "referrer": "",
        },
        "parentNode": _MockDocument {
          "__attributeMap": MockAttributeMap {
            "__items": [],
            "caseInsensitive": true,
          },
          "__listeners": [
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerdown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerover",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusin",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": null,
              "type": "e",
            },
          ],
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [
            MockDocumentTypeNode {
              "__attributeMap": MockAttributeMap {
                "__items": [
                  MockAttr {
                    "_name": "html",
                    "_namespaceURI": null,
                    "_value": "",
                  },
                ],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [],
              "_nodeValue": null,
              "nodeName": "!DOCTYPE",
              "nodeType": 10,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
            [Circular],
          ],
          "_nodeValue": null,
          "cookie": "",
          "defaultView": [Object],
          "nodeName": "#document",
          "nodeType": 9,
          "ownerDocument": null,
          "parentNode": null,
          "referrer": "",
        },
      },
    },
  },
  "s-hn": "DIV",
}
`;
